# Local-Chat-UsingWithUDS

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: inputLoop.h  input_loop.h  uiRenderer.h
client/src/: input_loop.c  main.c  uiRenderer.c
server/: CMakeLists.txt
server/include/: chat_message.h  client.h  publisher.h
server/src/: chat_message.c  client.c  main.c  publisher.c
